--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@ layout: default
 
   <div class="span7 offset1">
     {% if paginator.next_page %}
-      <a class="prev" href="{{paginator.next_page}}">&larr; Más antiguos</a>
+      <a href="/page{{paginator.next_page}}">&larr; Más antiguos</a>
     {% endif %}
     |
     {% if paginator.previous_page %}
-       <a class="next" href="{{paginator.previous_page}}">Más  recientes&rarr;</a>
+      {% if paginator.previous_page == 1 %}
+      <a href="/">Más  recientes&rarr;</a>
+      {% else %}
+      <a class="next" href="/page{{paginator.previous_page}}">Más  recientes&rarr;</a>
+      {% endif %}
     {% endif %}
   </div>
+
+
 </div>
