Deploy new version

--- a/cv.html
+++ b/cv.html
@@ -56,16 +56,18 @@
 
         <h2>Freelance <span class="role">Web developer</span> <span class="date">June 2011-Present</span></h2>
         <ul>
-		  <li>Contributor to the <a href="http://github.com/celluloid/reel">Reel project</a> a web server based on Celluloid and
-			  Cellulloid::IO
+		  <li>Co-authored an article on Practicing Ruby about <a href="https://practicingruby.com/articles/100">actor based concurrency with Celluloid</a>.
 		  </li>
+
+      <li>Contributor to the <a href="http://github.com/celluloid/reel">Reel project</a> a web server based on Celluloid and
+        Cellulloid::IO
+      </li>
 
 		  <li>Development of <a href="http://github.com/afcapel/websocket_parser">websocket_parser</a> a rubygem to parse frames in
 			  the Websocket protocol.
 		  </li>
           <li>Development of <a href="http://github.com/afcapel/alondra">Alondra</a>, an open source push notification framework.</li>
-          <li>Design and development of <a href="http://lurning.net">Lurning.net</a> a online learning platform.
-          </li>
+          <li>Design and development of Witicus.com a online learning platform (Currently not maintained).</li>
         </ul>
 
         <h2>Qoolife.com <span class="role">Web developer</span> <span class="date">November 2010-June 2011</span></h2>
@@ -98,7 +100,7 @@
       <dd class="details">
         <ul>
           <li>Ruby and Ruby on Rails development. Design of Restful web services.</li>
-          <li>Frontend development: JavaScript, jQuery. Accessibility and unobtrusive JavaScript.</li>
+          <li>Frontend development: JavaScript, jQuery, Backbone, css3 and sass.</li>
           <li>Objective-C development for Mac OS and iPhone OS.</li>
           <li>Agile methodologies. Scrum. Extreme Programming. Test Driven Development.</li>
           <li>JEE development: Spring, Hibernate, JPA, Grails.</li>
